# weibo-saver

./: .gitignore  CLAUDE.md  LICENSE  README.md  gui.py  main.py  pyproject.toml  requirements.txt  run_full_crawl.py  weibo_saver.spec
docs/: 项目管理文档.md
docs/screenshots/: README.md
weibo_saver/: __init__.py  __main__.py  config.py  constants.py  exceptions.py  main.py
weibo_saver/core/: __init__.py  api_fetcher.py  block_detector.py  browser_fetcher.py  card_renderer.py  dedup.py  edit_detector.py  engine.py  media_downloader.py  proxy_pool.py  qr_login.py  session_manager.py  visibility_detector.py
weibo_saver/models/: __init__.py  media_item.py  monitor_run.py  post.py  user.py
weibo_saver/monitor/: __init__.py  scheduler.py  state.py
weibo_saver/storage/: __init__.py  database.py  file_writer.py  layout.py
weibo_saver/ui/: __init__.py  gui_app.py  gui_config.py  icon.py  tray.py
weibo_saver/utils/: __init__.py  logging_setup.py  rate_limiter.py  retry.py  text_sanitizer.py
weibo_saver/versioning/: __init__.py  differ.py  tracker.py
